src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --clr-white: #ededed;
  --clr-gray: #f2f2f2;
  --clr-black: #141414;
  --clr-accent: #d46a43;

  --ff-base: "Open Sans", system-ui, sans-serif;
  --ff-accent: "Work Sans", sans-serif;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  background-color: var(--clr-white);
  color: var(--clr-black);
  max-width: 1280px;
  min-height: 100vh;
  margin: 0 auto;

  font-family: var(--ff-base);
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

button {
  font: inherit;
}

p,
h1,
h2,
h3,
h4 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4 {
  text-wrap: balance;
  font-family: var(--ff-accent);
  font-weight: 400;
}

#root {
  isolation: isolate;
}

a {
  position: relative;
  color: var(--clr-black);
  text-decoration: none;
}

a::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 4px;
  border-radius: 4px;
  background-color: var(--clr-accent);
  bottom: 0;
  left: 0;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 0.3s ease-in-out;
}

a:hover::before,
a:focus::before {
  transform-origin: left;
  transform: scaleX(1);
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.6em 1em;

  position: sticky;
  top: 0;

  background-color: var(--clr-white);
}

.mobile-nav-toggle {
  display: none;
}

.primary-navigation {
  display: flex;
  flex-direction: row;
  gap: 1rem;

  list-style: none;
  padding: 0;
  margin: 0;

  backdrop-filter: blur(1rem);
}

@media (max-width: 35em) {
  .primary-navigation {
    position: fixed;
    z-index: 1000;
    inset: 0 0 0 30%;

    flex-direction: column;
    padding: min(30vh, 10rem) 2em;

    transform: translateX(100%);
    transition: transform 350ms ease-out;
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0%);
  }

  .mobile-nav-toggle {
    display: block;
    position: absolute;
    z-index: 9999;
    top: 0.7em;
    right: 1rem;
    background-color: transparent;
    background-image: url("assets/hamburger.svg");
    background-repeat: no-repeat;
    border: 0;
    width: 2rem;
    aspect-ratio: 1;
  }

  .mobile-nav-toggle[aria-expanded="true"] {
    background-image: url("assets/xmark.svg");
  }
}

footer {
  padding: 1em;
  display: flex;
  justify-content: center;
}

